# HOTREE

./: CMakeLists.txt  readme.md  test_vary_blocksize.sh
Basic_HOTree/: CMakeLists.txt  readme.md
Basic_HOTree/benchmark/: CMakeLists.txt  initialization_vary_blocksize.cpp  query_vary_N.cpp  query_vary_blocksize.cpp  query_vary_k.cpp
Basic_HOTree/exp_result/: query_vary_K.csv  query_vary_K_Z_256.csv  query_vary_K_Z_512x20.csv
Basic_HOTree/src/: OHT.cpp  OHT.h  client.cpp  client.h  cryptor.h  define.h  hotree.cpp  hotree.h
Basic_HOTree/temp/: test.cpp  test_hotree
Basic_HOTree/test_code/: cryptor_test.cpp
Basic_OBIR_tree/benchmark/: CMakeLists.txt  obir_query_vary_N.cpp  obir_query_vary_k.cpp
Basic_OBIR_tree/exp_result/: obir_query_vary_K.csv  obir_query_vary_N.csv  query_vary_K.csv
Basic_OBIR_tree/src/: Branch.cpp  CMakeLists.txt  DataReader.cpp  cryptor.cpp  define.h  hotree.cpp  obir_tree.cpp  obir_tree.h  tree.cpp
Basic_OBIR_tree/test_code/: CMakeLists.txt  obir_test.cpp  plaintext_test.cpp
Doubly_HOTree/benchmark/: query_vary_N.cpp  query_vary_k.cpp
Doubly_HOTree/exp_result/: query_vary_K.csv  query_vary_K_Z_512.csv  query_vary_K_Z_512x2.csv
Doubly_HOTree/src/: CMakeLists.txt  OHT.cpp  cryptor.cpp  cryptor.h  hotree.cpp  hotree.h
Doubly_HOTree/temp/: 1.sh  test  test.cpp
Doubly_HOTree/temp/include/: depth_counter.hpp  graphs.hpp  hash_planner.hpp  iterator_stride.hpp  oavl.hpp  obipartite_matching.hpp  oblivious_operations.hpp  ocompact.hpp  ocuckoo_hash.hpp  ohash_base.hpp  ohash_bin.hpp  ohash_bucket.hpp  ohash_tiers.hpp  oheap.hpp  olinear_scan.hpp  omap.hpp  oram.hpp  oram_iterator.hpp  oshuffle.hpp  osort.hpp  prf.hpp  prp.hpp  timer.hpp  tree.hpp  types.hpp
Doubly_HOTree/test_code/: cryptor_test.cpp  hash_test.cpp
Optimized_HOTree/: 1.sh  Makefile
Optimized_HOTree/App/: App.cpp  App.h
Optimized_HOTree/App/benchmark/: query_vary_N.hpp  query_vary_k.hpp
Optimized_HOTree/Enclave/: Enclave.cpp  Enclave.edl
Optimized_HOTree/Enclave/TrustedLibrary/: EnclaveClient.txt  TCryptor.h
Optimized_HOTree/Enclave/src/: client.cpp  client.h  cryptor.cpp  cryptor.h  define.h
Optimized_HOTree/exp_result/: query_vary_K.csv  query_vary_N.csv
Optimized_HOTree/src/: Branch.h  DataReader.h  client.cpp  client.h  cryptor.cpp  cryptor.h  define.h  hotree.cpp  hotree.h  tree.h
benchmark/: CMakeLists.txt  initialization_vary_N.cpp  initialization_vary_blocksize.cpp  query_vary_N.cpp  query_vary_blocksize.cpp  query_vary_k.cpp
dataset/: readme.md
dataset/yelp/: keywords_dict.txt
exp_result/: build_vary_N.csv  initialization_vary_BS.csv  query_vary_BS.csv  query_vary_K.csv  query_vary_N.csv
src/: Branch.cpp  Branch.h  CMakeLists.txt  DataReader.cpp  OHT.cpp  OHT.h  client.cpp  client.h  cryptor.cpp  cryptor.h  define.h  horam.h  hotree.cpp  hotree.h  main.cpp  tree.cpp  tree.h
test_code/: CMakeLists.txt  ciphertext_test.cpp  hash_test.cpp  plaintext_test.cpp
